--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -27,7 +27,7 @@
         </section>
         <section>
             <h2>promotional video</h2>
-            <video>
+            <video controls>
                 <source src="https://www.vecteezy.com/video/4416948-walking-in-tropical-forest-with-small-creek-flowing-over-the-rocks-among-green-plants-under-sunlight" title="smale promotion vides">
             </video>
         </section>
