--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -64,7 +64,7 @@
         </table>
     </main>
     <footer>
-        <p>&copy; 2024 TechCon Conference. All rights reserved.</p>
+        &copy; 2024 TechCon Conference. All rights reserved
     </footer>
 
     
