--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -64,7 +64,7 @@
         </table>
     </main>
     <footer>
-      Copyright  &copy; 2024 TechCon Conference. All rights reserved
+     <p> copyright: &copy; 2024 TechCon Conference. All rights reserved </p>
     </footer>
 
     
